[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["David Sykes <david.sykes@octoenergy.com>"]

[tool.poetry.dependencies]
python = "3.6.6"

pandas = "*"
matplotlib = "*"
jupyterlab = "2.1.5"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

